# APG

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  README.md  pass_vertex.glslv  red_frag.glslf
assets/: sample_indoor.tmx  world1.tmx
cmake/: FindAPG.cmake  FindSDL2_mixer.cmake  FindTmxParser.cmake
include/: easylogging++.h
include/APG/: APG.hpp  APGAudio.hpp  APGCommon.hpp  APGCore.hpp  APGFont.hpp  APGGLRenderTest.hpp  APGGraphics.hpp  APGInput.hpp  APGNet.hpp  APGS11N.hpp  APGSDLRenderTest.hpp  APGTest.hpp  APGTiled.hpp  APGeasylogging.hpp  AnimatedSprite.hpp  Audio.hpp  AudioManager.hpp  Buffer.hpp  Camera.hpp  ErrorBase.hpp  FontManager.hpp  GL.hpp  GLTileset.hpp  GLTmxRenderer.hpp  Game.hpp  IndexBufferObject.hpp  InputManager.hpp  Mesh.hpp  SDL.hpp  SDLAudioManager.hpp  SDLFontManager.hpp  SDLGame.hpp  SDLInputManager.hpp  SDLTileset.hpp  SDLTmxRenderer.hpp  SXXDL.hpp  ShaderProgram.hpp  Sprite.hpp  SpriteBase.hpp  SpriteBatch.hpp  (+8 more)
include/APG/audio/: Audio.hpp  SDLAudioManager.hpp
include/APG/core/: APGCommon.hpp  APGContext.hpp  APGeasylogging.hpp  Game.hpp  Optional.hpp  Random.hpp  SDLGame.hpp
include/APG/font/: FontManager.hpp  FontUtil.hpp  PackedFontManager.hpp  SDLFontManager.hpp  StoredSDLFont.hpp
include/APG/graphics/: AnimatedSprite.hpp  Buffer.hpp  Camera.hpp  GLError.hpp  IndexBufferObject.hpp  Mesh.hpp  PackedTexture.hpp  ShaderProgram.hpp  Sprite.hpp  SpriteBase.hpp  SpriteBatch.hpp  Texture.hpp  Tileset.hpp  VAO.hpp  VertexAttribute.hpp  VertexAttributeList.hpp  VertexBufferObject.hpp
include/APG/input/: InputManager.hpp  SDLInputManager.hpp
include/APG/internal/: Assert.hpp  Log.hpp
include/APG/net/: ByteBuffer.hpp  NativeSocket.hpp  NetUtil.hpp  SDLSocket.hpp  Socket.hpp
include/APG/s11n/: JSON.hpp
include/APG/tiled/: GLTmxRenderer.hpp  PackedTmxRenderer.hpp  SDLTmxRenderer.hpp  TiledObject.hpp  TmxRenderer.hpp
include/ArrPeeGee/: APGTest.hpp  ArrPeeGee.hpp  ErrorBase.hpp  Game.hpp  SDLTileset.hpp  SDLTmxRenderer.hpp
include/test/: APGAudioTest.hpp  APGGLRenderTest.hpp  APGSDLRenderTest.hpp
licenses/: KENNEY.md  LICENSE.easylogging++  LICENSE.roboto.txt
src/: APGGLRenderTest.cpp  APGSDLRenderTest.cpp  APGTest.cpp  AnimatedSprite.cpp  ArrPeeGee.cpp  Audio.cpp  Buffer.cpp  CMakeLists.txt  Camera.cpp  ErrorBase.cpp  FontManager.cpp  GLTmxRenderer.cpp  Game.cpp  IndexBufferObject.cpp  Mesh.cpp  SDLAudioManager.cpp  SDLFontManager.cpp  SDLGame.cpp  SDLInputManager.cpp  SDLTmxRenderer.cpp  SXXDL.cpp  ShaderProgram.cpp  Sprite.cpp  SpriteBatch.cpp  Texture.cpp  TmxRenderer.cpp  VAO.cpp  VertexAttribute.cpp  VertexAttributeList.cpp  VertexBuffer.cpp  VertexBufferObject.cpp
src/audio/: Audio.cpp  SDLAudioManager.cpp
src/core/: APGContext.cpp  Game.cpp  Random.cpp  SDLGame.cpp
src/font/: FontManager.cpp  FontUtil.cpp  PackedFontManager.cpp  SDLFontManager.cpp
src/graphics/: AnimatedSprite.cpp  Camera.cpp  GLError.cpp  Mesh.cpp  PackedTexture.cpp  ShaderProgram.cpp  Sprite.cpp  SpriteBatch.cpp  Texture.cpp  VAO.cpp  VertexAttribute.cpp  VertexAttributeList.cpp  VertexBufferObject.cpp
src/input/: SDLInputManager.cpp
src/net/: ByteBuffer.cpp  NativeSocket.cpp  NetUtil.cpp  SDLSocket.cpp  Socket.cpp
src/s11n/: JSON.cpp
src/tiled/: GLTmxRenderer.cpp  PackedTmxRenderer.cpp  SDLTmxRenderer.cpp  TmxRenderer.cpp
test/: APGAudioTest.cpp  APGGLRenderTest.cpp  APGSDLRenderTest.cpp  CMakeLists.txt  s11ntest.cpp
